# screenshotter-bot

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml
data/: config-sample.json
screenshotter_bot/: __init__.py  client.py  config.py  listener.py
