[tool.poetry]
name = "screenshotter-bot"
version = "0.1.0"
description = ""
authors = ["Brian Stottler <brianstottler@gmail.com>"]
readme = "README.md"
packages = [{include = "screenshotter_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.3"
pynput = "^1.7.6"
dxcam = "^0.0.5"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
